Removed the visible-tasks check from the search bar as I believe it was unnecessary and causing issues with displaying the no tasks match message. Created and implemented the highlightText function, and also made some adjustments in the CSS.

--- a/css/styles.css
+++ b/css/styles.css
@@ -357,6 +357,10 @@ input::placeholder {
     color: #555;
     margin-top: 20px;
 }
-#search-input {
-    /* OVDE SMO STALI!*/
+
+/* Higlight slova koja se podudaraju sa pretragom */
+.highlight {
+    color: #004a98;
+    font-weight: bold; 
+    padding: 1px 1px;
 }
